--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,22 +1,20 @@
-FROM python:3.8
+# Use the official Python base image with Alpine Linux
+FROM python:3.9-alpine
 
-WORKDIR /workspace
+# Set the working directory in the container
+WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-        build-essential \
-    && rm -rf /var/lib/apt/lists/*
+# Install necessary dependencies
+RUN apk add --no-cache gcc musl-dev libffi-dev openssl-dev git
 
-# Copy and install Python dependencies
-COPY requirements.txt .
-RUN pip3 install --no-cache-dir -r requirements.txt
+# Install Flask and Gunicorn
+RUN pip install --no-cache-dir Flask==2.0.1 Werkzeug==2.0.3 gunicorn==20.1.0 apiflask==2.1.0 requests==2.26.0 flask-mysqldb==0.2.0
 
-# Expose the Flask app port
-EXPOSE 5000
-
-# Copy the entire project into the container
+# Copy the entire project to the working directory
 COPY . .
 
-# Run the Flask app
-CMD ["python", "main.py"]
+# Expose the port the app runs on
+EXPOSE 8000
+
+# Command to run the Python application using Gunicorn
+CMD ["gunicorn", "-b", "0.0.0.0:8000", "main:app"]
